--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "other": true,
         "comments": false,
         "strings": false
-    }
+    },
+    "python.pythonPath": "C:\\Users\\CST\\AppData\\Local\\Programs\\Python\\Python37\\python.exe"
 }
